# Rubber-Numbers

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-cd.yml  ci.yml  doxygen.yml  testing.yml
docs/: CONTRIBUTING.md  README.md
include/RubberNumbers/: RubberFloats.hpp  RubberIntegers.hpp  RubberNumbers.hpp
src/: examples.cpp  tests.cpp
src/RubberNumbers/: RubberFloats.cpp  RubberIntegers.cpp
